#155: Added mocked client-server for iCarol API